# portstreelint

./: License  Makefile  README.md  TODO.md  setup.cfg
man/: portstreelint.8
src/portstreelint/: check_categories.py  check_comment.py  check_description_file.py  check_installation_prefix.py  check_licenses.py  check_maintainer.py  check_marks.py  check_plist.py  check_port_path.py  check_unchanging_ports.py  check_vulnerabilities.py  check_www_site.py  library.py  load_config.py  load_data.py  main.py  show_categories.py  show_maintainers.py  show_notifications.py  show_summary.py
