[metadata]
name = pnu-portstreelint
description = FreeBSD ports tree lint
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.1.2
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = hubert.tournier@gmail.com
url = https://github.com/HubTou/portstreelint/
project_urls =
    Bug Tracker = https://github.com/HubTou/portstreelint/issues
keywords = pnu-project
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: BSD :: FreeBSD
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pnu-libpnu
    pnu-vuxml >= 1.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    portstreelint = portstreelint:main
    ptlint = portstreelint:main
    ptl = portstreelint:main

[options.data_files]
man/man8 =
    man/portstreelint.8.gz

